[gd_scene load_steps=13 format=3 uid="uid://ddllwp85jkxjs"]

[ext_resource type="Script" path="res://Pong/Pong.gd" id="1_onxfq"]
[ext_resource type="PackedScene" uid="uid://cekkqa8m2tood" path="res://Player/Player.tscn" id="1_txwnl"]
[ext_resource type="PackedScene" uid="uid://bsbe8cath07mp" path="res://Computer/Computer.tscn" id="2_cow70"]
[ext_resource type="PackedScene" uid="uid://l5k65ovb47wh" path="res://Ball/Ball.tscn" id="3_bv15c"]
[ext_resource type="Texture2D" uid="uid://dqpldbty6rl4l" path="res://assets/wall-horizontal.png" id="4_5b7rd"]
[ext_resource type="Texture2D" uid="uid://du2bextiq2jpw" path="res://assets/wall-vertical.png" id="6_gt7w4"]
[ext_resource type="Texture2D" uid="uid://d2vjgd3e7623l" path="res://assets/middle-line.png" id="7_vt5qg"]
[ext_resource type="FontFile" uid="uid://bcglpy8xdht5t" path="res://assets/alarm clock.ttf" id="8_egvgr"]
[ext_resource type="AudioStream" uid="uid://wqehec3bux8g" path="res://assets/pong_sound.mp3" id="9_l6lsy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck14y"]
size = Vector2(1188, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7ead"]
size = Vector2(20, 606)

[sub_resource type="LabelSettings" id="LabelSettings_3macb"]
font = ExtResource("8_egvgr")
font_size = 60

[node name="Pong" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_onxfq")

[node name="Player" parent="." instance=ExtResource("1_txwnl")]

[node name="Computer" parent="." instance=ExtResource("2_cow70")]

[node name="Ball" parent="." instance=ExtResource("3_bv15c")]

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(640, 40)

[node name="Sprite2D" type="Sprite2D" parent="TopWall"]
texture = ExtResource("4_5b7rd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource("RectangleShape2D_ck14y")

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(640, 680)

[node name="Sprite2D" type="Sprite2D" parent="BottomWall"]
texture = ExtResource("4_5b7rd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource("RectangleShape2D_ck14y")

[node name="GoalLeft" type="Area2D" parent="."]
position = Vector2(56, 357)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="GoalLeft"]
texture = ExtResource("6_gt7w4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_s7ead")

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2(1224, 357)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="GoalRight"]
texture = ExtResource("6_gt7w4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_s7ead")

[node name="Middle-line" type="Sprite2D" parent="."]
position = Vector2(640, 364)
texture = ExtResource("7_vt5qg")

[node name="PlayerScore" type="Label" parent="."]
offset_left = 552.0
offset_top = 77.0
offset_right = 625.0
offset_bottom = 141.0
text = "0"
label_settings = SubResource("LabelSettings_3macb")
horizontal_alignment = 1

[node name="ComputerScore" type="Label" parent="."]
offset_left = 665.0
offset_top = 77.0
offset_right = 738.0
offset_bottom = 141.0
text = "0"
label_settings = SubResource("LabelSettings_3macb")
horizontal_alignment = 1

[node name="PongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_l6lsy")

[connection signal="body_entered" from="GoalLeft" to="." method="_on_goal_left_body_entered"]
[connection signal="body_entered" from="GoalRight" to="." method="_on_goal_right_body_entered"]
